--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,131 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  width: 100%;
+}
+
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.heading {
+  padding: 1rem;
+  width: 100%;
+  text-align: center;
+  color: rgb(245, 175, 25);
+}
+@media (min-width: 768px) {
+  .heading {
+    text-align: left;
+    padding: 0 0 1rem 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100vh;
+    z-index: 2;
+  }
+}
+@media (min-width: 768px) {
+  .container__left {
+    flex-basis: 20%;
+  }
+}
+@media (min-width: 768px) {
+  .container__button {
+    border: 1.5px solid rgb(109, 174, 122);
+    height: 30vh;
+    border-radius: 4px;
+    box-shadow: 2px 2px 2px 1px rgba(109, 174, 122, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+.form {
+  padding: 0rem 1rem;
+}
+.form__search {
+  margin-bottom: 1rem;
+  border: 2px solid rgb(245, 175, 25);
+  border-radius: 4px;
+}
+@media (min-width: 768px) {
+  .form__search {
+    height: 2.5rem;
+  }
+}
+.form__search::-moz-placeholder {
+  color: rgb(109, 174, 122);
+}
+.form__search:-ms-input-placeholder {
+  color: rgb(109, 174, 122);
+}
+.form__search::placeholder {
+  color: rgb(109, 174, 122);
+}
+.button {
+  display: block;
+  margin: 0.5rem auto;
+  width: calc(100% - 2rem);
+  text-decoration: none;
+  padding: 1em 2.5em;
+  background-color: #F93939;
+  color: #fff;
+  border-radius: 0.25em;
+  background-image: linear-gradient(75deg, hwb(132 24% 24%), #e7cc1a, #d55042, #F5AF19, #3CC157);
+  background-size: 300%;
+  background-position: left;
+  transition: 300ms background-position ease-in-out;
+  border: none;
+}
+
+.button:hover {
+  background-position: right;
+}
+
 .gallery {
   width: 100%;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
 }
-
+@media (min-width: 768px) {
+  .gallery {
+    width: 60%;
+    height: 60vh;
+  }
+}
 .gallery__photo {
-  height: auto;
+  width: 100%;
+  height: 60vh;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  padding: 0.5rem 1rem;
+}
+@media (min-width: 768px) {
+  .gallery__photo {
+    width: 33.3333333333%;
+    height: 30%;
+    padding: 0 0.5rem;
+  }
+}
+
+.ball {
+  position: absolute;
+  border-radius: 100%;
+  opacity: 0.7;
+  z-index: 0;
 }/*# sourceMappingURL=main.css.map */
