--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,16 +1,147 @@
 @use "./partials/breakpoints" as *;
 
-.gallery {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  
+}
+
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.heading {
+  padding: 1rem;
+  width: 100%;
+  text-align: center;
+
+  color: rgb(245, 175, 25);
+
+  @include tablet {
+    text-align: left;
+    padding: 0 0 1rem 0;
+
+  }
 
 }
 
-.gallery__photo {
-// width: calc(100%/3);
-height: auto;
-object-fit: cover;
+.container {
+  @include tablet {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 100vh;
+    z-index: 2;
 
+  }
+
+  &__left {
+    @include tablet {
+      flex-basis: 20%;
+    }
+
+  }
+
+  &__button {
+    @include tablet {
+      border: 1.5px solid rgb(109, 174, 122);
+      ;
+      height: 30vh;
+      border-radius: 4px;
+      box-shadow: 2px 2px 2px 1px rgb(109, 174, 122, 0.2);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+}
+
+
+.form {
+  padding: 0rem 1rem;
+
+  @include tablet {
+    // padding: 0 2rem;
+  }
+
+
+
+  &__search {
+    margin-bottom: 1rem;
+    border: 2px solid rgb(245, 175, 25);
+    border-radius: 4px;
+
+    @include tablet {
+      height: 2.5rem;
+    }
+  }
+
+  &__search::placeholder {
+    color: rgb(109, 174, 122);
+  }
+
+  &__submit {}
+}
+
+.button {
+  display: block;
+  margin: 0.5rem auto;
+  width: calc(100% - 2rem);
+
+  text-decoration: none;
+  padding: 1em 2.5em;
+  background-color: #F93939;
+  color: #fff;
+  border-radius: 0.25em;
+  background-image: linear-gradient(75deg, hwb(132 24% 24%), #e7cc1a, #d55042, #F5AF19, #3CC157);
+  background-size: 300%;
+  background-position: left;
+  transition: 300ms background-position ease-in-out;
+  border: none;
+  // margin: 0 1rem;
+}
+
+.button:hover {
+  background-position: right;
+}
+
+
+.gallery {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+
+  @include tablet {
+    width: 60%;
+    height: 60vh;
+  }
+
+  &__photo {
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
+    object-position: center;
+    padding: 0.5rem 1rem;
+    // aspect-ratio: 16/9;
+
+    @include tablet {
+      width: calc(100%/3);
+      height: 30%;
+      padding: 0 0.5rem;
+    }
+  }
+
+}
+
+.ball {
+  position: absolute;
+  border-radius: 100%;
+  opacity: 0.7;
+  z-index: 0;
 }
